Closed Bug 122434 Opened 23 years ago Closed 23 years ago

Iframes do not clip when printing

Categories

(Core :: Printing: Output, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: rods, Assigned: rods)

Details

Attachments

(1 file, 1 obsolete file)

The iframes do not clip when print because they have a view. So instead of the Paint coming down from the PageFrame with the correct clipping, it comes directly into the view and onto the PageContentFrame
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.9
Attached patch patch (obsolete) — Splinter Review
Basically, when I added in the the new nsPageContentFrame, which always has a view. If forgot that it needs to know about the special clipping rect and set that for painting. Tested printing: 1) printed a page 2) printed a selection (text) 3) printed a frameset doc 4) printed a selected frame with an iframe in the frameset Did PrintPreview for plain doc and frameset doc
Attachment #66944 - Attachment is obsolete: true
Comment on attachment 66949 [details] [diff] [review] slightly beter patch r=dcone
Attachment #66949 - Flags: review+
sr=hyatt
fixed
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified.
verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: